# authopie

./: .gitignore  README.md  TODO  pyproject.toml
authopie/: requirements.txt  start.py
authopie/src/: main.py  schemas.py
authopie/src/crud/: __init__.py  user.py
authopie/src/dependencies/: security.py
authopie/src/routers/: docs.py  key_pair.py  role.py  user.py
authopie/src/sso/: oidc.py  schemas.py
authopie/src/static/: dropin.css  dropin.js
authopie/src/static/highlight/: highlight.min.js
authopie/src/templates/: sso.html
authopie/src/utils/: auth.py
backend/: Dockerfile  config.json  requirements.txt  start.py
backend/src/: __init__.py  config.py  exceptions.py  main.py  models.py  schemas.py
backend/src/crud/: __init__.py  access_token.py  key_pair.py  key_pairs.py  refresh_token.py  role.py  token_pair.py  user.py
backend/src/dependencies/: auth.py  constants.py  cookie.py  database.py  pwdhash.py  security.py
backend/src/routers/: docs.py  import_export.py  jwks.py  key_pair.py  key_pairs.py  role.py  static.py  token.py  user.py
backend/src/templates/: api_token.html  dashboard.html  login.html  roles.html  users.html
backend/src/templates/shared/: base.html  (+1 more)
backend/src/util/: __init__.py  auth.py  config.py  cookie.py  logger.py  security.py
backend/src/utils/: auth.py  config.py  constants.py  cookie.py  pwdhash.py
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: Header.svelte  Login.svelte  Register.svelte  api.ts
frontend/src/routes/: __layout.svelte  index.svelte  profile.svelte
