[tool.poetry]
name = "authopie"
version = "0.1.0"
description = "Authopie - A small scale, performant, authentification and authorization service, written with FastAPI"
authors = ["klaemsch <54587753+klaemsch@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^1.10.7"}
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.95.1"
SQLAlchemy = "^2.0.9"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "authopie.start:main"